--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
 <div>
+  <div>
+    <h2>Shopping Cart</h2>
+    <button mat-raised-button class="blackBtn">Proceed to checkout</button>
+  </div>
   <app-cart-details></app-cart-details>
 </div>
