--- a/src/app/components/cart-details/cart-details.component.scss
+++ b/src/app/components/cart-details/cart-details.component.scss
@@ -1,24 +1,71 @@
-#container {
-  box-shadow: 1px 1px 4px lightgrey;
-}
+@import 'src/variables.scss';
 
+#container {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  & > *:first-child {
+    flex: 3;
+    flex-basis: 450px;
+  }
+  & > *:last-child {
+    flex: 2;
+  }
+  #tableWrapper {
+    box-shadow: 1px 1px 4px lightgrey;
+    margin: 1em;
+    color: $greyfont;
+    padding: 1em;
+    table {
+      table-layout: auto;
+      border-collapse: collapse;
+      width: 100%;
+      thead {
+        border-bottom: 1px solid $bordergrey;
+        text-align: left;
+      }
+      tr {
+        border-bottom: 1px solid $bggrey;
+        img {
+          max-width: 10vw;
+        }
+      }
+      td {
+        padding: 2em 0;
+      }
+    }
+    button#update {
+      float: right;
+      margin: 1em;
+    }
+  }
+}
 .quantity {
   width: 120px;
-  height: 30px;
-  display: grid;
-  grid-auto-flow: column;
-
-  grid-auto-columns: 1fr;
+  max-width: 15vw;
+  display: flex;
+  flex-wrap: wrap;
   & > * {
+    flex: 1;
+    flex-basis: 20px;
+  }
+  & > div {
     text-align: center;
     border: 1px solid black;
-    line-height: 30px;
+    box-shadow: -0.5px -0.5px 1px black;
+    line-height: 25px;
   }
   div {
     display: inline-block;
   }
+  button {
+    border: 1px solid $bordergrey;
+    background-color: $bggrey;
+  }
   #edit {
     border: none;
+    background-color: transparent;
+    height: 27px;
   }
 }
 
@@ -33,7 +80,7 @@ button.iconBtn {
   background-color: transparent;
   background-size: auto;
   background-repeat: no-repeat;
-  height: 30px;
-  width: 30px;
+  height: 25px;
+  width: 25px;
   border: none;
 }
